# goit-pythonweb-hw-06

./: README.md  connect.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 04c1d3baf372_add_new_tables.py
